--- a/src/package_files/action_manifest.json
+++ b/src/package_files/action_manifest.json
@@ -1,6 +1,8 @@
 {
   "default_bindings": [
    {
+    "controller_type": "knuckles",
+    "binding_url": "default_action_manifests/default_knuckles.json"
    }
   ], 
   "actions": [
@@ -43,11 +45,16 @@
       "type": "boolean"
     },
     {
-      "name": "/actions/main/in/menu",
+      "name": "/actions/main/in/start",
       "requirement": "optional",
       "type": "boolean"
     },
     {
+      "name": "/actions/main/in/back",
+      "requirement": "optional",
+      "type": "boolean"
+    },
+	{
       "name": "/actions/main/in/guide",
       "requirement": "optional",
       "type": "boolean"
@@ -81,7 +88,27 @@
       "name": "/actions/main/in/lt",
       "requirement": "optional",
       "type": "vector1"
-    },			
+    },
+    {
+      "name": "/actions/main/in/updpad",
+      "requirement": "optional",
+      "type": "boolean"
+    },
+    {
+      "name": "/actions/main/in/downdpad",
+      "requirement": "optional",
+      "type": "boolean"
+    },
+    {
+      "name": "/actions/main/in/leftdpad",
+      "requirement": "optional",
+      "type": "boolean"
+    },
+    {
+      "name": "/actions/main/in/rightdpad",
+      "requirement": "optional",
+      "type": "boolean"
+    }	
 	
   ],
   "action_sets": [
@@ -108,7 +135,8 @@
 	    "/actions/main/in/y" : "Y Button",
 		"/actions/main/in/rb" : "RB Button",
 		"/actions/main/in/lb" : "LB Button",
-		"/actions/main/in/menu" : "Menu Button",
+		"/actions/main/in/start" : "Start Button",
+		"/actions/main/in/back" : "Back Button",
 		"/actions/main/in/guide" : "Guide Button",
 		"/actions/main/in/rt" : "Right Trigger",
 		"/actions/main/in/lt" : "Left Trigger",
@@ -116,10 +144,14 @@
 		"/actions/main/in/rthumbp" : "Right Thumbstick Press",
 		"/actions/main/in/lthumb" : "Left Thumbstick",
 		"/actions/main/in/rthumb" : "Right Thumbstick",
+		"/actions/main/in/updpad" : "Up Dpad",
+		"/actions/main/in/downdpad" : "Down Dpad",
+		"/actions/main/in/leftdpad" : "Left Dpad",
+		"/actions/main/in/rightdpad" : "Right Dpad",
 						
 
         "/actions/haptic/out/HapticsLeft" : "Haptics Left",
-        "/actions/haptic/out/HapticsRight" : " Haptics Right",
+        "/actions/haptic/out/HapticsRight" : " Haptics Right"
     }
   ]
 }
